# advent2022

./: .gitignore  Cargo.toml  data.txt
src/: lib.rs  main.rs
src/d1/: main.rs  mod.rs
src/d10/: main.rs
src/d11/: main.rs
src/d12/: main.rs
src/d13/: main.rs
src/d14/: app.rs  input-test.txt  main.rs  mod.rs  mq.rs  topo.rs
src/d15/: mod.rs
src/d16/: mod.rs
src/d2/: main.rs  mod.rs
src/d3/: main.rs  mod.rs
src/d4/: main.rs  mod.rs
src/d5/: main.rs  mod.rs
src/d6/: main.rs
src/d7/: main.rs
src/d8/: main.rs
src/d9/: main.rs
