[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
itertools = "0.10.5"
regex = "1.7.1"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.1"
priority-queue = "1.3"
ndarray = "0.15"
nom = "7.1.3"
[[bin]]
name = "day1"
path = "src/d1/main.rs"

[[bin]]
name = "day2"
path = "src/d2/main.rs"

[[bin]]
name = "day3"
path = "src/d3/main.rs"

[[bin]]
name = "day4"
path = "src/d4/main.rs"

[[bin]]
name = "day5"
path = "src/d5/main.rs"

[[bin]]
name = "day6"
path = "src/d6/main.rs"

[[bin]]
name = "day7"
path = "src/d7/main.rs"

[[bin]]
name = "day8"
path = "src/d8/main.rs"

[[bin]]
name = "day9"
path = "src/d9/main.rs"

[[bin]]
name = "day10"
path = "src/d10/main.rs"

[[bin]]
name = "day11"
path = "src/d11/main.rs"

[[bin]]
name = "day12"
path = "src/d12/main.rs"

[[bin]]
name = "day13"
path = "src/d13/main.rs"
