[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"
default-run = "advent2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
itertools = "0.10.5"
regex = "1.9"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.1"
priority-queue = "1.3"
ndarray = "0.15"
nom = "7.1.3"
colored = "2.0.0"
egui = "0.21"
emath = "0.21"
eframe = { version = "0.21", default-features = false, features = ["glow"] }
clap = { version = "4.4.2", features = ["derive"] }
intervallum = "1.4.0"
gcollections = "1.5.0"
num-traits = "0.2.16"
petgraph = "0.6.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "advent2022"
path = "src/main.rs"

[[bin]]
name = "day14"
path = "src/d14/main.rs"

[profile.release]
debug = true
